Add Openrewrite, with org.openrewrite.java.migrate.UpgradeToJava17 recipe (#381)